--- a/src/components/heroBanner/HeroBanner.css
+++ b/src/components/heroBanner/HeroBanner.css
@@ -3,6 +3,9 @@
   /* line-height: 1.3;/assets/img/Logo9.svg */
 }
 
-.home-top-banner-right-none{
+
+@media (max-width: 768px) {
+  .home-top-banner-right-none{
     display: none !important;
+}
 }
